--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:Mirrack.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="1080" d:DesignHeight="1920"
         x:Class="Mirrack.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
@@ -15,6 +15,20 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Grid RowDefinitions="1*, 3*, 1*">
+		<Grid  ColumnDefinitions="*,*,*">
+			<Rectangle Fill="orange" Grid.Column="0"></Rectangle>
+			<Rectangle Fill="purple" Grid.Column="1"></Rectangle>
+			<Rectangle Fill="Green" Grid.Column="2"></Rectangle>
+		</Grid>
+		<Rectangle Grid.Row="1" Fill="Aqua"></Rectangle>
+		<Grid Grid.Row="2" ColumnDefinitions="*,*,*">
+			<Rectangle Fill="red" Grid.Column="0"></Rectangle>
+			<Rectangle Fill="black" Grid.Column="1"></Rectangle>
+			<Rectangle Fill="Magenta" Grid.Column="2"></Rectangle>
+		</Grid>
+	</Grid>
+	
+    
 
 </Window>
