create a demo mvvm stack to learn

--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -3,7 +3,8 @@
         xmlns:vm="using:Mirrack.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="1080" d:DesignHeight="1920"
+        xmlns:local="clr-namespace:Mirrack"
+		mc:Ignorable="d" d:DesignWidth="1080" d:DesignHeight="1920"
 		Width="540" Height="960"
         x:Class="Mirrack.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -17,16 +18,16 @@
     </Design.DataContext>
 
 	<Grid RowDefinitions="1*, 3*, 1*">
-		<Grid  ColumnDefinitions="* * *">
-			<Rectangle Fill="orange" Grid.Column="0"></Rectangle>
-			<Rectangle Fill="purple" Grid.Column="1"></Rectangle>
-			<Rectangle Fill="Green" Grid.Column="2"></Rectangle>
+		<Grid ColumnDefinitions="* * *">
+			<local:DemoView Name="Icon"/>
+			<Label Content="{Binding Greeting}" Grid.Column="1"></Label>
+			<Rectangle Grid.Column="2"></Rectangle>
 		</Grid>
-		<Rectangle Grid.Row="1" Fill="Aqua"></Rectangle>
+		<Rectangle Grid.Row="1"></Rectangle>
 		<Grid Grid.Row="2" ColumnDefinitions="*,*,*">
-			<Rectangle Fill="red" Grid.Column="0"></Rectangle>
-			<Rectangle Fill="black" Grid.Column="1"></Rectangle>
-			<Rectangle Fill="Magenta" Grid.Column="2"></Rectangle>
+			<Rectangle Grid.Column="0"></Rectangle>
+			<Rectangle Grid.Column="1"></Rectangle>
+			<Rectangle Grid.Column="2"></Rectangle>
 		</Grid>
 	</Grid>
 	
