--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -20,7 +20,7 @@
 	<Grid RowDefinitions="1*, 3*, 1*">
 		<Grid ColumnDefinitions="* * *">
 			<local:DemoView Name="Icon"/>
-			<Label Content="{Binding Greeting}" Grid.Column="1"></Label>
+			<Label Grid.Column="1"></Label>
 			<Rectangle Grid.Column="2"></Rectangle>
 		</Grid>
 		<Rectangle Grid.Row="1"></Rectangle>
