--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mirrack"
+		xmlns:demo="clr-namespace:Mirrack.Views.DemoModule"
 		mc:Ignorable="d" d:DesignWidth="1080" d:DesignHeight="1920"
 		Width="540" Height="960"
+		Background="Black"
         x:Class="Mirrack.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
@@ -19,15 +21,15 @@
 
 	<Grid RowDefinitions="1*, 3*, 1*">
 		<Grid ColumnDefinitions="* * *">
-			<local:DemoView Name="Icon"/>
-			<Label Grid.Column="1"></Label>
-			<Rectangle Grid.Column="2"></Rectangle>
+			<demo:DemoIconView Name="Icon"/>
+			<Label Grid.Column="1" Foreground="white" HorizontalAlignment="Center" FontSize="64" Margin="64">10:32</Label> <!--time placeholder-->
+			<demo:DemoScrollView Name="Scroll" Grid.Column="2"/>
 		</Grid>
-		<Rectangle Grid.Row="1"></Rectangle>
+		<demo:DemoContentView Name="Content" Grid.Row="1"/>
 		<Grid Grid.Row="2" ColumnDefinitions="*,*,*">
-			<Rectangle Grid.Column="0"></Rectangle>
+			<demo:DemoLOptionView Name="LOption"/>
 			<Rectangle Grid.Column="1"></Rectangle>
-			<Rectangle Grid.Column="2"></Rectangle>
+			<demo:DemoROptionView Grid.Column="2" Name="ROption"/>
 		</Grid>
 	</Grid>
 	
