Create Controls to build UI

--- a/Mirrack/App.axaml
+++ b/Mirrack/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Mirrack.App"
              xmlns:local="using:Mirrack"
+			 xmlns:controls="using:Mirrack.Controls"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -12,4 +13,16 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<MergeResourceInclude Source="/Views/Controls/LCorner.axaml"/>
+				<MergeResourceInclude Source="/Views/Controls/LOption.axaml"/>
+				<MergeResourceInclude Source="/Views/Controls/RCorner.axaml"/>
+				<MergeResourceInclude Source="/Views/Controls/ROption.axaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
+	
 </Application>
