--- a/Mirrack/Views/DemoModule/DemoIconView.axaml
+++ b/Mirrack/Views/DemoModule/DemoIconView.axaml
@@ -2,12 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:templates="clr-namespace:Mirrack.Views.Templates"
+			 xmlns:controls="using:Mirrack.Controls"
              mc:Ignorable="d" d:DesignWidth="360" d:DesignHeight="360"
 			 Background="Black"
              x:Class="Mirrack.Views.DemoModule.DemoIconView">
 
-	<templates:Corner Testing="Hello World">
-	</templates:Corner>
-	<!--Image Source="/Assets/avalonia-logo.ico" MaxHeight="300" MaxWidth="300"></Image-->
+
+
+	<controls:LCorner>
+		<Image Source="/Assets/avalonia-logo.ico" MaxHeight="300" MaxWidth="300"></Image>
+	</controls:LCorner>
 </UserControl>
