--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -20,11 +20,11 @@
     </Design.DataContext>
 
 	<Grid RowDefinitions="1*, 3*, 1*">
-		<Grid ColumnDefinitions="* * *">
+		<Grid ColumnDefinitions="*, *, *">
 			<ContentControl Content="{Binding IconVM}" Name="Icon"/>
 			<StackPanel Grid.Column="1">
-				<Label Foreground="white" HorizontalAlignment="Center" FontSize="64" Margin="20,60,20,0" Content="{Binding Time}"/>
-				<TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="White" HorizontalAlignment="Center" FontSize="32" Margin="20,0" Text="{Binding Date}"/>
+				<Label Foreground="white" HorizontalAlignment="Center" FontSize="64" Margin="0,20,0,0" Content="{Binding Time}"/>
+				<TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="White" FontSize="32" Text="{Binding Date}"/>
 			</StackPanel>
 			<ContentControl Grid.Column="2" Content="{Binding ScrollVM}" Name="Scroll"/>
 		</Grid>
