--- a/Mirrack/Views/WeatherModule/IconView.axaml
+++ b/Mirrack/Views/WeatherModule/IconView.axaml
@@ -3,13 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:controls="using:Mirrack.Controls"
-             mc:Ignorable="d" d:DesignWidth="360" d:DesignHeight="360"
-			 Background="Black"
-             x:Class="Mirrack.Views.DemoModule.DemoIconView">
-
-
+             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="400"
+             x:Class="Mirrack.Views.WeatherModule.IconView">
 
 	<controls:LCorner>
-		<Image Margin="16" Source="/Assets/avalonia-logo.ico" MaxHeight="300" MaxWidth="300"></Image>
+		<TextBlock TextWrapping="Wrap" FontSize="40" Margin="24" HorizontalAlignment="Center" Text="{}"/>
 	</controls:LCorner>
 </UserControl>
