--- a/Mirrack/App.axaml
+++ b/Mirrack/App.axaml
@@ -21,6 +21,8 @@
 				<MergeResourceInclude Source="/Views/Controls/LOption.axaml"/>
 				<MergeResourceInclude Source="/Views/Controls/RCorner.axaml"/>
 				<MergeResourceInclude Source="/Views/Controls/ROption.axaml"/>
+				<MergeResourceInclude Source="/Views/Controls/AnalogClock.axaml"/>
+				<MergeResourceInclude Source="/Views/Controls/WeatherWidget.axaml"/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
