--- a/Mirrack/Views/Controls/WeatherWidget.axaml
+++ b/Mirrack/Views/Controls/WeatherWidget.axaml
@@ -11,39 +11,40 @@
   -->
   
   <Design.PreviewWith>
-    <StackPanel Width="400" Spacing="10">      
-        <StackPanel Background="{DynamicResource SystemRegionBrush}">
+    <StackPanel Width="360" Spacing="10">      
+        <StackPanel Background="Black">
           <controls:WeatherWidget Icon="cloudy" Summary="Overcast" Temperature="75°F" TemperatureHigh="82°F" TemperatureLow="71°F" PrecipProbability="25%" WindSpeed="20 MPH"/>
         </StackPanel>
     </StackPanel>
   </Design.PreviewWith>
  
   <ControlTheme x:Key="{x:Type controls:WeatherWidget}" TargetType="controls:WeatherWidget">
+	<Setter Property="Foreground" Value="white"/>
     <Setter Property="Template">
       <ControlTemplate>
-		  <Grid RowDefinitions="3*,1*" RowSpacing="10" Margin="20">
+		  <Grid RowDefinitions="2*,1*" >
 			  <StackPanel Grid.Row="0">
-				  <Image Source="/Assets/avalonia-logo.ico" MaxHeight="132"/>
-				  <!--todo! make this corospond with "Icon"-->
+				  <Image Source="/Assets/weatherIcons/clear-night.png" MaxHeight="120" Margin="12"/>
+				  <!--todo! make this corospond with "Icon" property-->
 				  <TextBlock Text="{TemplateBinding Temperature}" FontSize="64" FontWeight="Bold" TextAlignment="Center"/>
 				  <TextBlock Text="{TemplateBinding Summary}" FontSize="32" TextAlignment="Center"/>
 			  </StackPanel>
-			  <Grid Grid.Row="1" ColumnDefinitions="*,*" RowDefinitions="*,*" RowSpacing="20">
+			  <Grid Grid.Row="1" ColumnDefinitions="*,*" RowDefinitions="*,*">
 				  <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-					  <TextBlock FontSize="32" Padding="3" VerticalAlignment="Center">High:</TextBlock>
-					  <TextBlock Text="{TemplateBinding TemperatureHigh}" FontWeight="Bold" FontSize="32" Padding="3"/>
+					  <TextBlock FontSize="20" Padding="3" VerticalAlignment="Center">High:</TextBlock>
+					  <TextBlock Text="{TemplateBinding TemperatureHigh}" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Padding="3"/>
 				  </StackPanel>
 				  <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-					  <TextBlock FontSize="32" Padding="3" VerticalAlignment="Center">Low:</TextBlock>
-					  <TextBlock Text="{TemplateBinding TemperatureLow}" FontWeight="Bold" FontSize="32" Padding="3"/>
+					  <TextBlock FontSize="20" VerticalAlignment="Center">Low:</TextBlock>
+					  <TextBlock Text="{TemplateBinding TemperatureLow}" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Padding="3"/>
 				  </StackPanel>
 				  <StackPanel Grid.Row="1">
 					  <Label HorizontalAlignment="Center" FontSize="20">Precipitation</Label>
-					  <TextBlock Text="{TemplateBinding PrecipProbability}" FontSize="32" FontWeight="Bold" TextAlignment="Center" />
+					  <TextBlock Text="{TemplateBinding PrecipProbability}" FontSize="25" FontWeight="Bold" TextAlignment="Center" />
 				  </StackPanel>
 				  <StackPanel Grid.Column="1" Grid.Row="1">
 					  <Label HorizontalAlignment="Center" FontSize="20">Wind</Label>
-					  <TextBlock Text="{TemplateBinding WindSpeed}" FontSize="32" FontWeight="Bold" TextAlignment="Center" />
+					  <TextBlock Text="{TemplateBinding WindSpeed}" FontSize="25" FontWeight="Bold" TextAlignment="Center" />
 				  </StackPanel>
 			  </Grid>
 		  </Grid>
