--- a/Mirrack/Views/WeatherModule/IconView.axaml
+++ b/Mirrack/Views/WeatherModule/IconView.axaml
@@ -2,11 +2,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:vm="using:Mirrack.ViewModels"
 			 xmlns:controls="using:Mirrack.Controls"
-             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="400"
-             x:Class="Mirrack.Views.WeatherModule.IconView">
+             mc:Ignorable="d" d:DesignWidth="360" d:DesignHeight="400"
+             x:Class="Mirrack.Views.WeatherModule.IconView"
+			 x:DataType="vm:WeatherModule.IconViewModel">
 
 	<controls:LCorner>
-		<TextBlock TextWrapping="Wrap" FontSize="40" Margin="24" HorizontalAlignment="Center" Text="{}"/>
+		<Border  Background="Black" Width="350">
+			<controls:WeatherWidget Summary="{Binding Summary}" Temperature="{Binding Temperature}" TemperatureHigh="{Binding TemperatureHigh}" TemperatureLow="{Binding TemperatureHigh}" PrecipProbability="{Binding PrecipProbability}" WindSpeed="{Binding WindSpeed}" />
+		</Border>
 	</controls:LCorner>
 </UserControl>
