--- a/Mirrack/Views/MainWindow.axaml
+++ b/Mirrack/Views/MainWindow.axaml
@@ -18,23 +18,10 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
+	
+	<ContentControl Content="{Binding Screen}"/>
 
-	<Grid RowDefinitions="1*, 3*, 1*">
-		<Grid ColumnDefinitions="*, *, *">
-			<ContentControl Content="{Binding IconVM}" Name="Icon"/>
-			<StackPanel Grid.Column="1">
-				<Label Foreground="white" HorizontalAlignment="Center" FontSize="64" Margin="0,20,0,0" Content="{Binding Time}"/>
-				<TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="White" FontSize="32" Text="{Binding Date}"/>
-			</StackPanel>
-			<ContentControl Grid.Column="2" Content="{Binding ScrollVM}" Name="Scroll"/>
-		</Grid>
-		<ContentControl Grid.Row="1" Content="{Binding ContentVM}" Name="Content"/>
-		<Grid Grid.Row="2" ColumnDefinitions="*,*,*">
-			<ContentControl Content="{Binding LOptionVM}" Name="LOption"/>
-			<Rectangle Grid.Column="1"></Rectangle>
-			<ContentControl Grid.Column="2" Content="{Binding ROptionVM}" Name="ROption"/>
-		</Grid>
-	</Grid>
+	
 	
     
 
